# CMIP7-GHG-Concentration-Manuscripts

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
book/: _config.yml  _toc.yml  bibliography.md  cmip-phase-comparison-historical-standalone.ipynb  cmip-phase-comparison-historical-standalone.md  cmip-phase-comparison-historical-standalone.py  references.bib  user-guide-historical.ipynb  user-guide-historical.md  user-guide-historical.py  user-guide-scenarios.ipynb  user-guide-scenarios.md  user-guide-scenarios.py
book/_build/latex/: projectnamenotset.tex  references.bib
book/_ext/: apastyle.py  bracket_citation_style.py
book/_ext/pybtexapastyle/: LICENSE  setup.py
book/_ext/pybtexapastyle/formatting/: apa.py
book/_ext/pybtexapastyle/labels/: apa.py
book/_static/: apastyle.css
book/docs/: cmip-phase-comparison-historical-standalone.md  intro.md  references.bib  user-guide-historical.md  user-guide-scenarios.md
changelog/: 11.docs.md  13.docs.md  2.feature.md  3.docs.md  5.docs.md  6.docs.md  7.docs.md  8.docs.md  README.md
notebooks/: cmip-phase-comparison-historical-standalone.py  user-guide-historical.py  user-guide-scenarios.py
scripts/: converter.py  create-diff.py  create-user-guide-historical-pdf.py  create-user-guide-scenario-pdf.py  create_latex_pdf.py  download-parallel-test.py  download-test.py  generate-ghg-listing.py
src/local/: __init__.py  data_loading.py  paths.py  xarray_loading.py
src/local/esgf/: __init__.py  dataset.py  db_helpers.py  esgf_dataset_collection.py
(+18 files in other folders)
